add somes modes,controllers

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
+    <!--<link rel="stylesheet" href="styles/main.css">-->
     <!-- endbuild -->
   </head>
   <body ng-app="angularWebposApp">
@@ -21,22 +21,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="container">
-      <div class="header">
-        <ul class="nav nav-pills pull-right">
-          <li class="active"><a ng-href="#">Home</a></li>
-          <li><a ng-href="#/about">About</a></li>
-          <li><a ng-href="#">Contact</a></li>
-        </ul>
-        <h3 class="text-muted">angularWebpos</h3>
-      </div>
-
       <div ng-view=""></div>
-
-      <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
-      </div>
-    </div>
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
@@ -73,8 +58,14 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/model/fixtures.js"></script>
+        <script src="scripts/model/Item.js"></script>
+        <script src="scripts/model/orderCount.js"></script>
+        <script src="scripts/model/promotion.js"></script>
+        <script src="scripts/controllers/cartcontroller.js"></script>
+        <script src="scripts/controllers/homecontroller.js"></script>
+        <script src="scripts/controllers/itemcontroller.js"></script>
+        <script src="scripts/controllers/paymentcontroller.js"></script>
         <!-- endbuild -->
 </body>
 </html>
